# kinematics_library

./: CMakeLists.txt  LICENSE  README.md  manifest.xml
.kdev4/: kinematics_library.kdev4
include/: HandleKinematicConfig.hpp  KinematicsConfig.hpp  KinematicsFactory.hpp  KinematicsHelper.hpp  RobotKinematics.hpp
include/abstract/: AbstractKinematics.hpp  IkFastSolver.hpp  KdlSolver.hpp  KinematicsHelper.hpp  SRSKinematicSolver.hpp  TracIkSolver.hpp
include/kinematics_library/: HandleKinematicConfig.hpp  KinematicsConfig.hpp  KinematicsFactory.hpp
include/kinematics_library/abstract/: AbstractKinematics.hpp  IkFastSolver.hpp  Ikfast.h  KdlSolver.hpp  KinematicsHelper.hpp  TracIkSolver.hpp
include/kinematics_library/solver/asfour_method/: IK7DoFSolver.hpp  math_misc.hpp
include/kinematics_library/solver/optimization_method/: HybridIkSolver.hpp  OptConfig.hpp  OptSolver.hpp  ProblemFormulation.hpp
include/kinematics_library/solver/shimizu_method/: SRSKinematicHelper.hpp  SRSKinematicSolver.hpp
include/robots/artemis/: ArtemisKinematics.hpp  artemis_arm_ikfast_solver.h
include/solver/: SRSKinematicHelper.hpp  SRSKinematicSolver.hpp
include/solver/shimizu_method/: SRSKinematicHelper.hpp  SRSKinematicSolver.hpp
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  HandleKinematicConfig.cpp  KinematicsFactory.cpp  KinematicsHelper.cpp  Main.cpp  RobotKinematics.cpp  kinematics_library.pc.in
src/abstract/: AbstractKinematics.cpp  IkFastSolver.cpp  KdlSolver.cpp  KinematicsHelper.cpp  SRSKinematicSolver.cpp  TracIkSolver.cpp
src/robots/artemis/: ArtemisKinematics.cpp  artemis_arm_ikfast_solver.cpp
src/solver/: SRSKinematicHelper.cpp  SRSKinematicSolver.cpp
src/solver/asfour_method/: IK7DoFSolver.cpp  README.txt  math_misc.cpp
src/solver/optimization_method/: HybridIkSolver.cpp  OptSolver.cpp  ProblemFormulation.cpp
src/solver/shimizu_method/: SRSKinematicHelper.cpp  SRSKinematicSolver.cpp
test/: CMakeLists.txt  test_Dummy.cpp  test_kinematics_library.cpp
test/config/: kdl_config.yml  opt_ik_config.yml  tracik_config.yml
